[project]
name = "malty-rust"
version = "0.1.0"
description = "2025 IUP USOAR project. Spatial analysis of urban decay in McKeesport, PA."
authors = [
    {name = "ng-23",email = "23grattan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
